2017-08-02  Araki Ken  <arakiken@users.sf.net>

	* quartz/ui_display.c: dialog() is implemented.

	* quartz/ui_connect_dialog.c: ui_connect_dialog() is implemented.

	* cocoa.[ch]:
	  - cocoa_dialog_{password|okcancel|alert}() are added.
	  - uitoolkit => uiwindow

	* main_loop.c: ignore_unknown_opt of bl_conf_parse_args() is 1 on
	  MacOSX/Cocoa because "open -a /../mlterm.app" command passes
	  "-psn_N_NNNNNN" option to mlterm.

	* main-cocoa.m: Arguments of main() is copied to global_args.

	* bl_dialog.[ch]: char* => const char*

2017-07-30  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.h: is_vt52_mode is moved to the end of vt_parser_t.

2017-07-29  Araki Ken  <arakiken@users.sf.net>

	* wayland/ui_window.c: copy_blended_pixel() is fixed.

	* gtk/vte.c:
	  - vte_terminal_set_colors() falls back to the default palettes
	    if palette_size == 0.
	  - vte_terminal_set_default_colors() is implemented.

2017-07-27  Araki Ken  <arakiken@users.sf.net>

	* fb/ui_font.c: Wrong processing of percentage in fontname is fixed.

2017-07-23  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* ui_screen.[ch]:
	  - ui_set_trim_trailing_newline_in_pasting() which trims trailing newline
	    in pasting text is added.
	  - "trim_trailing_newline_in_pasting" is added to OSC 5379, 5380 etc.
	  - shortcut_str() is called just after shortcut_match() in key_pressed().

	* vt_screen.c: check_or_copy_region() doesn't append extra space at the end.

	* version.h: 3.8.2 -> 3.8.2post

2017-07-17  Araki Ken  <arakiken@users.sf.net>

	* 3.8.2 released.
	  (tag "rel-3_8_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.8.2.

	* PROTOCOL, man/mlterm.1: Updated.

	* im_iiimf.c, im_uim.c, vte.c: Compiling error is fixed.

2017-07-15  Araki Ken  <arakiken@users.sf.net>

	* ui_main_config.c: If USE_FREETYPE is defined, "use_anti_alias" option works.

	* fb/ui_font.c: