@@ -30,14 +30,12 @@ static ui_display_t *opened_disp = &_disp;
 
 /* --- static functions --- */
 
-static int dialog(bl_dialog_style_t style, const char *msg) {
+static int dialog_cb(bl_dialog_style_t style, const char *msg) {
   if (style == BL_DIALOG_OKCANCEL) {
     return cocoa_dialog_okcancel(msg);
   } else if (style == BL_DIALOG_ALERT) {
     return cocoa_dialog_alert(msg);
   } else {
-    bl_msg_printf("%s\n", msg);
-
     return -1;
   }
 }
@@ -53,7 +51,7 @@ ui_display_t *ui_display_open(char *disp_name, /* Ignored */
   }
 
   /* Callback should be set before bl_dialog() is called. */
-  bl_dialog_set_callback(dialog);
+  bl_dialog_set_callback(dialog_cb);
 
   /* _disp.width and _disp.height are set in viewDidMoveToWindow */
 
